--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
 html,
 body {
+  background-color: beige;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+div.ant-card-body {
+  background-color: floralwhite;
 }
 
 a {
